feat: Release 1.2.0 - API Docs, VDOM Fixes, Least Privilege Analysis

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ FLASK_DEBUG=0
 
 # Session
 SESSION_TYPE=filesystem
+
+# Gemini AI - For Log Analyzer AI Analysis
+# Get your API key from: https://aistudio.google.com/app/apikey
+GEMINI_API_KEY=
